--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,4 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 4800
+lib_deps = https://github.com/jbellue/Minitel1B_Hard
