--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 4800
-lib_deps = https://github.com/jbellue/Minitel1B_Hard
+lib_deps = 
+	https://github.com/jbellue/Minitel1B_Hard
+	ewpa/LibSSH-ESP32@^1.2.3
