Add a basic weather page

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ monitor_speed = 4800
 lib_deps = 
 	https://github.com/jbellue/Minitel1B_Hard
 	ewpa/LibSSH-ESP32@^1.2.3
+	bblanchon/ArduinoJson@^6.17.3
